# rust_clicker_android

./: Cargo.toml
.github/workflows/: build-android.yml
src/: main.rs
