[package]
name = "clicker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
macroquad = "0.4"
ndk-glue = "0.7"

[package.metadata.android]
package = "com.freeze.clicker"
label = "Rust Clicker"
version_code = 1
version_name = "1.0"
min_sdk_version = 21
target_sdk_version = 33

[package.metadata.android.application]
name = "android.app.NativeActivity"
native_libs = ["clicker"]
